added module-info.java
error in docking frames version, cannot find resource bundle

 Conflicts:
	key.core.testgen/src/main/java/de/uka/ilkd/key/settings/TestGenerationSettings.java
	key.core.testgen/src/main/java/de/uka/ilkd/key/testgen/ModelGenerator.java
	key.core.testgen/src/main/java/de/uka/ilkd/key/testgen/TestGenerationSettings.java
	key.core.testgen/src/main/java/de/uka/ilkd/key/testgen/macros/SemanticsBlastingMacro.java
	key.core.testgen/src/main/java/de/uka/ilkd/key/testgen/settings/TestGenerationSettings.java
	key.core.testgen/src/main/java/de/uka/ilkd/key/testgen/smt/testgen/AbstractTestGenerator.java
	key.core.testgen/src/main/java/de/uka/ilkd/key/testgen/smt/testgen/MemoryTestGenerationLog.java
	key.core.testgen/src/main/java/de/uka/ilkd/key/testgen/smt/testgen/TestGenerationLog.java
	key.ui/src/main/java/de/uka/ilkd/key/ui/util/CommandLine.java
	keyext.proofmanagement/src/main/java/org/key_project/proofmanagement/Main.java
	keyext.ui.testgen/src/main/java/de/uka/ilkd/key/gui/testgen/TGInfoDialog.java
	keyext.ui.testgen/src/main/java/de/uka/ilkd/key/gui/testgen/TGWorker.java
	keyext.ui.testgen/src/main/java/de/uka/ilkd/key/gui/testgen/TestgenExtension.java
	keyext.ui.testgen/src/main/java/de/uka/ilkd/key/gui/testgen/TestgenOptionsPanel.java